[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/components/Inventory/slots/AbstractItemSlot/AbstractItemSlot.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/components/Inventory/slots/AbstractItemSlot/AbstractItemSlot.stylebox" type="StyleBox" id=2]

[node name="AbstractItemSlot" type="Panel" groups=[
"gui_item_slot",
]]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StackLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
margin_right = -2.0
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.0745098 )

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
